webserver/deployments/blue-green/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  host: webserver.ocp.straubcloud.de
  to:
    kind: Service
    name: webserver-blue
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
